welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: not found: value pos
    max2=nums(pos)
              ^max2Value:8: error: not found: value pos
      pos=i
      ^